fix bugs 2